FIX now preventing line breaks in ColorIndicator widget

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -223,3 +223,6 @@ html.sap-phone .sapMWizard .sapMWizardNextButtonVisible {position: relative !imp
 
 /* Pad */
 .exf-pad > .sapMPanelContent {border-bottom: 0 !important}
+
+/* ColorIndicator */
+.sapMObjStatus {white-space: nowrap;}
